# HopCity

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini  mono_crash.d4716fb0.0.json  mono_crash.d4716fb0.1.json  mono_crash.d4716fb0.2.json  mono_crash.d4716fb0.3.json
data/Textures/: Sprite-0004.aseprite
data/_DEV/: Frame.aseprite  Sprite-0001.aseprite  Structures.ase  Tree.aseprite
scripts/: build.sh  debug.sh  run.sh
src/: Animation.cpp  Animation.h  Keyboard.h  Profiler.cpp  Profiler.h  Screen.cpp  Screen.h  ScreenGame.cpp  ScreenGame.h  ScreenMainMenu.h  main.cpp
src/Game/: Camera.cpp  Camera.h  Common.h  Construction.cpp  Construction.h  GlobalEvents.h  Map.cpp  Map.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  ScreenGame.cpp  ScreenGame.h  ScreenMainMenu.cpp  ScreenMainMenu.h  StructureMap.cpp  StructureMap.h  Structures.cpp  Structures.h  TileMap.cpp  TileMap.h  TileMapRenderer.cpp  TileMapRenderer.h  Tiles.cpp  Tiles.h  World.cpp  World.h  WorldConstants.h  WorldGeneration.cpp  WorldGeneration.h
src/Game/Registry/: StructureRegistry.cpp  StructureRegistry.h  TileRegistry.cpp  TileRegistry.h
